[gd_scene load_steps=3 format=3 uid="uid://sgmhdq4k2jop"]

[ext_resource type="Script" path="res://ui/end_screen.gd" id="1_0fbuv"]

[sub_resource type="LabelSettings" id="LabelSettings_sqip0"]
font_size = 60

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbuv")

[node name="C" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="P" type="Panel" parent="C"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="C/P"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="C/P"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 152.0
text = "TITLE"
label_settings = SubResource("LabelSettings_sqip0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="P" type="Panel" parent="C/P"]
layout_mode = 0
offset_left = 10.0
offset_top = 100.0
offset_right = 390.0
offset_bottom = 300.0

[node name="ColorRect" type="ColorRect" parent="C/P/P"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VB" type="VBoxContainer" parent="C/P/P"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -44.5
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2

[node name="RedoCurrentEncounterButton" type="Button" parent="C/P/P/VB"]
layout_mode = 2
text = "REDO CURRENT ENCOUNTER"

[node name="QuitToTitleButton" type="Button" parent="C/P/P/VB"]
layout_mode = 2
text = "QUIT TO TITLE"

[node name="RandomEncounterButton" type="Button" parent="C/P/P/VB"]
visible = false
layout_mode = 2
text = "RANDOM ENCOUNTER"
